k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todos-backend
  namespace: react-test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todos-backend
  template:
    metadata:
      labels:
        app: todos-backend
    spec:
      containers:
        - name: todos-backend
          image: pangasathish/todos-backend:latest
          ports:
            - containerPort: 5000
