k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todos-backend
  namespace: react-test
spec:
  selector:
    app: todos-backend
  ports:
    - port: 5000
      targetPort: 5000
  type: ClusterIP
