k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todos-frontend
  namespace: react-test
spec:
  selector:
    app: todos-frontend
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
